registration for buyer and user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=paysystem
-server.port = 8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/paysystem
+server.port = 808
+
+spring.datasource.url=jdbc:postgresql://localhost:8080/paysystem
 spring.datasource.username=postgres
-spring.datasource.password=0000
+spring.datasource.password=janara2004
 
 spring.thymeleaf.prefix=classpath:/templates/
 
