--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=paysystem
 server.port = 8081
 
-spring.datasource.url=jdbc:postgresql://localhost:8080/paysystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/paysystem
 spring.datasource.username=postgres
-spring.datasource.password=janara2004
+spring.datasource.password=0000
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
