--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=paysystem
-server.port = 8081
+server.port = 808
 
 spring.datasource.url=jdbc:postgresql://localhost:8080/paysystem
 spring.datasource.username=postgres
 spring.datasource.password=janara2004
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-
+spring.thymeleaf.cache=false
 
 spring.freemarker.expose-request-attributes=true
 spring.servlet.multipart.max-file-size=4096MB
